crates/compiler/cypress/tests/snapshots/test_parse__ten_times_eleven_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "10 * 11\n"
---
(BeginFile
    (BeginTopLevelDecls
        (* HintExpr Num=>Int@0 InlineBinOpStar=>OpStar@1 Num=>Int@2 EndBinOpStar)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("10"), Star, IntBase10("11"))

[=== formatted below ===]
10 * 11
