crates/compiler/cypress/tests/snapshots/test_parse__two_arg_closure_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\\a, b -> 42\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginLambda
            Ident=>LowerIdent@1
            Ident=>LowerIdent@3
            InlineLambdaArrow=>OpArrow@4
            Num=>Int@5
        EndLambda)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Lambda([Ident("a"), Ident("b")], IntBase10("42"))

[=== formatted below ===]

